# CadmusEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  vcpkg-configuration.json  vcpkg.json
CadmusRHI/: CMakeLists.txt  RHI.natvis
CadmusRHI/Backends/Vulkan/: CMakeLists.txt
CadmusRHI/Backends/Vulkan/src/: Defs.hpp  ImmediateCommandsBufferManager.cpp  ImmediateCommandsBufferManager.hpp  VkAdapter.hpp  VkBackend.cpp  VkBackend.hpp  VkCommandBuffer.cpp  VkCommandBuffer.hpp  VkContext.cpp  VkContext.hpp  VkGraphicsAdapter.cpp  VkSwapchain.cpp  VkSwapchain.hpp  VulkanFactory.cpp  VulkanGxAdapter.cpp  VulkanSwapchain.cpp
CadmusRHI/Backends/Vulkan/src/Helpers/: IOUtils.cpp  IOUtils.hpp  String.hpp  Types.hpp  VkHelper.hpp
CadmusRHI/Backends/Vulkan/src/Pipeline/: VkPipeline.hpp  VkPipelineBuilder.cpp  VkPipelineBuilder.hpp
CadmusRHI/Backends/Vulkan/src/Resources/: VkTexture.cpp  VkTexture.hpp
CadmusRHI/interface/: BitmappedFreeList.hpp  BitmaskTemplates.hpp  CommandBuffer.hpp  CommandBuffersPool.hpp  Context.hpp  Defs.hpp  Defs.hpp.in  GxAdapter.cpp  GxAdapter.hpp  Pipeline.hpp  Swapchain.hpp  Types.hpp
CadmusRHI/interface/Resources/: Texture.hpp
CadmusRHI/tests/: BitmappedFreeList.tests.cpp  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Config/: Engine.toml
Engine/include/Engine/Application/: Application.h
Engine/src/Application/: Application.cpp
Engine/src/Common/: String.hpp
Engine/src/Platform/: CdmPaths.hpp
Engine/src/Platform/Modules/: Module.hpp
Engine/src/Platform/Modules/Win/: Module.cpp
Engine/src/Platform/Win/: CdmPaths.cpp
SampleApplication/: CMakeLists.txt  main.cpp
cmake/: CadmusConfig.cmake.in  CompilerWarnings.cmake
scripts/: vcpkg_setup.ps1
